# pac-man

./: README.md  diagrama.mmd
pacman/: pyproject.toml
pacman/src/pacman/: cli.py  controller.py  game.py
pacman/src/pacman/models/: entity.py  ghost.py  maze.py  pacman.py  position.py
pacman/tests/: test_controller.py  test_game.py  test_pacman.py  test_waze.py
